<!--
  ~ Copyright (c) 2018. The Washington Post
  -->

<resources>
    <string name="app_name">android-zendesk</string>
    <string name="zd_contact_us_url">https://helpcenter.washingtonpost.com/hc/en-us/requests/new</string>
    <string name="zd_contact_us_url_subscriptions_form">https://helpcenter.washingtonpost.com/hc/en-us/requests/new?ticket_form_id=403687</string>
    <string name="zd_help_center_url">https://helpcenter.washingtonpost.com/hc/en-us</string>
    <string name="zd_contact_us_title">Contact us</string>
    <string name="zd_help_center_title">Help Center</string>
    <string name="header_help">How can we help you?</string>
    <string name="header_contact">Contact information</string>
    <string name="header_description">Description</string>
    <string name="hint_area">Pick the area you need help with.*</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_subject">Enter subject</string>
    <string name="required">Required</string>
    <string name="hint_description">Enter description</string>
    <string name="hint_attachment">Add an attachment</string>
    <string name="button_submit">Submit</string>
    <string name="hint_response">A member of our support staff will respond as soon as possible.</string>
    <string name="helper_text_description">Please enter the details of your request*</string>
    <string name="helper_text_email">Email Address*</string>
    <string name="helper_text_subject">Subject*</string>
    <string name="image_content_description">Image being submitted</string>
    <string name="image_attached">%1$d image attached</string>
    <string name="images_attached">%1$d images attached</string>
    <string name="zendesk_help">Help</string>
    <string name="content_description_loading">Loading</string>
    <string name="content_description_image_uploaded">Image uploaded</string>
    <string name="submit_success">Successfully Submitted</string>
    <string name="done">Done</string>
    <string name="submit_another_request">Submit another request</string>
    <string name="zendesk_offline_msg">This feature is not available without a connection. Please try again later.</string>
    <string name="characters_used_accessibility">Characters used: %1$d</string>
</resources>
