<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="zendeskViewModel"
            type="com.wapo.zendesk.viewmodel.ZendeskViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/zendesk_header"
                    style="@style/zendesk_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="55dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/header_help"
                    android:accessibilityHeading="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/area_menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="11dp"
                    android:hint="@string/hint_area"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:error="@{zendeskViewModel.inputFormValidator.error}"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_text"
                    app:layout_constraintBottom_toTopOf="@id/contact_header"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/zendesk_header">

                    <AutoCompleteTextView
                        android:id="@+id/input_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@={zendeskViewModel.inputForm}"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/contact_header"
                    style="@style/zendesk_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="55dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/header_contact"
                    android:accessibilityHeading="true"
                    app:layout_constraintBottom_toTopOf="@id/input_email_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/area_menu" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="11dp"
                    app:error="@{zendeskViewModel.inputEmailValidator.error}"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_text"
                    app:helperText="@string/helper_text_email"
                    app:layout_constraintBottom_toTopOf="@id/input_subject_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contact_header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="email"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:text="@={zendeskViewModel.inputEmail}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_subject_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="11dp"
                    app:error="@{zendeskViewModel.inputSubjectValidator.error}"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_text"
                    app:helperText="@string/helper_text_subject"
                    app:layout_constraintBottom_toTopOf="@id/description_header"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_email_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_subject"
                        android:importantForAutofill="no"
                        android:inputType="textEmailSubject"
                        android:text="@={zendeskViewModel.inputSubject}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/description_header"
                    style="@style/zendesk_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="55dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/header_description"
                    android:accessibilityHeading="true"
                    app:layout_constraintBottom_toTopOf="@id/input_description_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_subject_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="11dp"
                    app:counterEnabled="true"
                    app:error="@{zendeskViewModel.inputDescriptionValidator.error}"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_text"
                    app:helperText="@string/helper_text_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_description"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:text="@={zendeskViewModel.inputDescription}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/image_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    app:layout_constraintBottom_toTopOf="@id/image_counter"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_description_layout"
                    app:layout_goneMarginTop="0dp" />

                <TextView
                    android:id="@+id/image_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/button_attach"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_list" />

                <Button
                    android:id="@+id/button_attach"
                    style="@style/zendesk_attach_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:drawablePadding="5dp"
                    android:text="@string/hint_attachment"
                    android:textAllCaps="false"
                    android:textColor="@color/attach_button_text"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_counter" />

                <Button
                    android:id="@+id/button_submit"
                    style="@style/zendesk_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:enabled="@{zendeskViewModel.isFormValid}"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/button_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/zendesk_submit_text_color"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_attach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:text="@string/hint_response"
                    android:textColor="@color/info_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A6000000"
            android:clickable="true"
            android:contentDescription="@string/content_description_loading"
            android:focusable="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
